# rhiannon

./: .gitignore  Cargo.toml  README.md
src/: discord.rs  main.rs
src/audioproccesing/: mod.rs
src/audioproccesing/audioinputs/: mod.rs
src/audioproccesing/inputs/: mod.rs
src/cli/: mod.rs
src/utils/: cli.rs  mod.rs
src/utils/handlers/: mod.rs  rh_info.rs  rh_start.rs
