[package]
name = "rhiannon"
version = "0.0.0"
authors = ["Jesus Garnica", "Jacob Killelea <Jkillelea@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0" # Low-level cross-platform audio I/O library in pure Rust.

# A Rust library for the Discord API
[dependencies.serenity]
version = "0.8.3"
features = ["voice", "builder", "client", "framework", "gateway",
            "http", "model", "standard_framework", "utils", "rustls_backend"]
